--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "version": "1.1.3",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
+  "style": "dist/style.css",
   "files": [
     "dist"
   ],
@@ -33,7 +34,9 @@
     "publish": "npm publish --access public",
     "deploy": "vite build --config vite.config.demo.js && gh-pages -d demo",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
@@ -43,6 +46,7 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.6.0",
+    "cypress": "^13.10.0",
     "docdash": "^2.0.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
