--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "private": false,
   "type": "module",
   "author": "jimmy defains",
-  "version": "1.1.9",
+  "version": "1.1.10",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "style": "dist/style.css",
@@ -52,11 +52,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
+    "glob": "^10.4.1",
     "jsdoc": "^4.0.3",
     "jsdom": "^24.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^5.2.0",
+    "vite-plugin-lib-inject-css": "^2.1.1",
     "vitest": "^1.6.0"
   },
   "peerDependencies": {
