--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "private": false,
   "type": "module",
   "author": "jimmy defains",
-  "version": "1.1.10",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "style": "dist/style.css",
+  "version": "1.1.11",
+  "main": "dist/Modal.js",
+  "module": "dist/Modal.js",
+  "style": "dist/assets/Modal.css",
   "files": [
     "dist"
   ],
