--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "private": false,
   "type": "module",
   "author": "jimmy defains",
-  "version": "1.1.12",
-  "main": "dist/modal.js",
-  "module": "dist/modal.js",
+  "version": "1.1.13",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "style": "dist/assets/modal.css",
   "files": [
     "dist"
