chore: Update package.json and vite.config.js for version 1.1.14 and TypeScript declaration file

--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
   "private": false,
   "type": "module",
   "author": "jimmy defains",
-  "version": "1.1.13",
+  "version": "1.1.14",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "style": "dist/assets/modal.css",
+  "types": "dist/Modal.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:component": "vite build --config vite.config.js",
+    "build:component": "vite build --config vite.config.js && copyfiles -f src/lib/components/*.d.ts dist/",
     "build:demo": "vite build --config vite.config.demo.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -41,10 +42,11 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^1.6.0",
+    "copyfiles": "^2.4.1",
     "cypress": "^13.10.0",
     "docdash": "^2.0.2",
     "eslint": "^8.57.0",
@@ -57,6 +59,7 @@
     "jsdom": "^24.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "typescript": "^5.5.2",
     "vite": "^5.2.0",
     "vite-plugin-lib-inject-css": "^2.1.1",
     "vitest": "^1.6.0"
